<resources>
    <string name="app_name">Fondos de pantalla</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>


    <string name="desarrollador">Desarrollado por: Jhosel Badillo Cortés</string>

    <!--MENU ADMIN-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Listar</string>
    <string name="Salir">Cerrar Sesión</string>

    <!--MENU CLIENTE-->
    <string name="Opcionestxt"></string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Más Opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>

    <string name="Acceder">Acceder</string>

    <!--LOGIN ADMINISTRADORES-->
    <string name="LoginTXT">Login de Administradores</string>
    <string name="Ingresar">Ingresar</string>


    <!--CATEGORIAS-->
    <string name="Eligeunacategoriatxt">Elige una categoria</string>
    <string name="Peliculas">Peliculas</string>
    <string name="Series">Series</string>
    <string name="Musica">Musica</string>
    <string name="Videojuegos">Videojuegos</string>

    <!--REGISTRO ADMINISTRADORES-->
    <string name="Registrotxt">Registro de Administradores</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombre Completo</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha De Registro</string>
    <string name="Registrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>