<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentosAdministrador.InicioAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/Eligeunacategoriatxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        //Fila 1
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            //Peliculas
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/dredd">

                </androidx.appcompat.widget.AppCompatImageView>


                <Button
                    android:id="@+id/Peliculas"
                    android:text="@string/Peliculas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_personalizado"
                    ></Button>

            </androidx.appcompat.widget.LinearLayoutCompat>

            //SERIES
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/miss">

                </androidx.appcompat.widget.AppCompatImageView>

                <Button
                    android:id="@+id/Series"
                    android:text="@string/Series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_personalizado"
                    ></Button>

            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.appcompat.widget.LinearLayoutCompat>

        //Fila 2
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            //JUEGOS
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/legends">

                </androidx.appcompat.widget.AppCompatImageView>

                <Button
                    android:id="@+id/Videojuegos"
                    android:text="@string/Videojuegos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_personalizado"
                    ></Button>

            </androidx.appcompat.widget.LinearLayoutCompat>

            //MUSICA
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ramm">

                </androidx.appcompat.widget.AppCompatImageView>

                <Button
                    android:id="@+id/Musica"
                    android:layout_marginStart="5dp"
                    android:text="@string/Musica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_personalizado"
                    ></Button>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>